# symphony-lang

./: .gitignore  .gitlab-ci.yml  .gitmodules  BinaryOperationsReference.hs  Dockerfile  Dockerfile.in  IAN-TODO.txt  LICENSE  Makefile  Makefile.am  README.md  Resources.hs  TODO  Vagrantfile  autogen  autotools.md  case-studies.md  configure.ac  generate-resources-for-challenge.bash  generate-resources-for-challenge.sh  less  notes.md  operations.txt  package.yaml  prepare-ec2-instance  provision.sh  psl.cabal  stack.yaml
backends/: backends.y  bgv.cbi  bgw.cbi  gc.cbi  spdz.cbi  yao.cbi
benchmarks/: end-to-end-final.csv  end-to-end-full.csv  end-to-end-lan.csv  end-to-end-wan.csv  gates.csv  oakland22-experiments.py  oakland22-vis.py
bristol/: test.txt
build-aux/: COMMIT.bash  DATE.sh  GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_DOCKER_BUILD_RULES.am  GATBPS_GIT_ARCHIVE_RULES.am  GATBPS_GIT_BUNDLE_RULES.am  GATBPS_GIT_CLONE_RULES.am  GATBPS_M4_RULES.am  GATBPS_RECIPE_MARKER.am  GATBPS_TAR_RULES.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_NOP.am  GATBPS_V_PAD.am  GATBPS_WGET_RULES.am  GATBPS_XZ_RULES.am  INPUT_FILTER.sh.in  PACKAGE_STRING.df.in  VERSION.bash  VERSION.sh  cp.am  docker.am  doxygen.am  dvi-dist.am  echo.sh  gen-configure.sh  git.am  gzip.am  html-dist.am  m4.am  pdf-dist.am  plaintext-dist.am  plaintext.am  ps-dist.am  save-artifacts.sh  sh-form.sh  tar.am  wget.am  xz.am
build-aux/downloads/: stack-2.1.3-linux-x86_64-static.tar.gz.ag.json
build-aux/gitbundles/: hector-mockups.ag.json
data/lib/: stdlib.sym
dev-aux/: format.ac.vim  format.am.vim  format.c.vim  special-files.gmk
dev-aux/special-files/: gatbps.gmk  sst.gmk
doc/: doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-I.html  doc-index-O.html  doc-index-P.html  doc-index-T.html  doc-index-U.html  doc-index-Y.html  index.html
doc/aeson-1.4.6.0/: Data-Aeson.html  doc-index.json
doc/all/: doc-index-33.html  doc-index-43.html  doc-index-46.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-M.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-X.html  (+2 more)
docs/: doc-index-B.html  doc-index-D.html  doc-index-G.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-R.html  doc-index-S.html  doc-index-V.html  doc-index-W.html  doc-index.html
emacs/: psl-mode.el
examples/: BinaryOperationsReference.hs  aaa.psl  add.psl  alias.psl  arg-par-contains.psl  assoc-map.psl  atq-bgw-12.psl  atq-bgw-16.psl  atq-bgw-20.psl  atq-bgw-24.psl  atq-bgw-28.psl  atq-bgw-32.psl  atq-bgw-36.psl  atq-bgw-40.psl  atq-bgw-8.psl  atq-bgw-small.psl  atq-bgw.psl  atq-nounicode.psl  atq-spdz-12.psl  atq-spdz-16.psl  atq-spdz-20.psl  atq-spdz-24.psl  atq-spdz-28.psl  atq-spdz-32.psl  atq-spdz-36.psl  atq-spdz-40.psl  atq-spdz-8.psl  atq-spdz-small.psl  atq-spdz.psl  atq.psl  atqtest.psl  basic-div.psl  basic-if.psl  basic-list.psl  basic-oram-mono.psl  basic-oram.psl  basic-pair.psl  basic-small-cir.psl  basic-sum.psl  basic.all  (+154 more)
experiments/: Cargo.toml  lwz_vs_waksman.csv
formalism/: psl.tex
gitlab-ci/: docker
lang/: Makefile  package.yaml  stack.yaml  symphony.cabal
lib/: stdlib.all  stdlib.psl
m4/: DEFINE_ALL.m4  DEFINE_AR.m4  DEFINE_AWK.m4  DEFINE_CC.m4  DEFINE_CXX.m4  DEFINE_DOCKER.m4  DEFINE_GIT.m4  DEFINE_GREP.m4  DEFINE_GZIP.m4  DEFINE_LN_S.m4  DEFINE_M4.m4  DEFINE_MAKEINFO.m4  DEFINE_MKDIR_P.m4  DEFINE_OPENSSL.m4  DEFINE_RANLIB.m4  DEFINE_SED.m4  DEFINE_TAR.m4  DEFINE_WGET.m4  DEFINE_XZ.m4  GATBPS_ARG_ENABLE.m4  GATBPS_ARG_ENABLE_BOOL.m4  GATBPS_ARG_WITH.m4  GATBPS_ARG_WITH_BOOL.m4  GATBPS_CACHE_CHECK.m4  GATBPS_CHECK_BASIC.m4  GATBPS_CHECK_CFLAG.m4  GATBPS_CHECK_COMPILE.m4  GATBPS_CHECK_CXXFLAG.m4  GATBPS_CHECK_EXEEXT.m4  GATBPS_CHECK_HEADER.m4  GATBPS_CHECK_LIB.m4  GATBPS_CHECK_LINK.m4  GATBPS_CHECK_RUN.m4  GATBPS_CHECK_SOFT_INCLUDE.m4  GATBPS_CHECK_VARS.m4  GATBPS_CONFIG_FILE.m4  GATBPS_CONFIG_FILE_SUBST.m4  GATBPS_CONFIG_LATER.m4  GATBPS_CONFIG_LATER_SUBST.m4  GATBPS_CONFIG_LATER_VAR.m4  (+56 more)
main/: Main.hs  MainPSL.hs
meeting-minutes/: 2020-02-26.md  2020-03-11.md  2020-03-27.md
pcl/: .gitignore  CHANGELOG.md  LICENSE  p.tex  pcl.cabal
programs/: basic.sym
resources/: atq.res  cmp-tutorial.res  cmp.res  db-stats.res  euclid.res  karmarkar.res  msort.res  mult-depth-test.res  pfold.res  qsort-pure.res  qsort.res  rand.res  sumprod.res
scratch/: mod-a.psl  mod-b.psl  msort.psl  rand.psl  virtual-cmp-instantiate.psl
scripts/: libraries.sh  oakland22-vis.py  provision-focal64.sh
sec/: atq.sec  db-stats.sec  gcd.sec  karmarkar.sec  merge-sort-dedup.sec  quick-sort.sec  security.y
slide-examples/: euclid.pal.psl  euclid.pil.A.psl  euclid.pil.B.psl  euclid.pil.C.psl  euclid.pil.D.psl  euclid.pil.E.psl  euclid.psl  mill-auto.psl  mill-auto.psl.html  mill-just-types.pal.psl  mill-just-types.pal.psl.html  mill.pal.psl  mill.pal.psl.html  mill.psl  mill.psl.html  mill.psl.sec  mill.psl.sec.html
src/: AddToUVMHS.hs  PSL.hs
stale-examples/: merge-sort.psl  scratch.psl
stale-writeup/: spdz.md
test/: AddToUVMHSSpec.hs  AllynSpec.hs  Main.hs  SymphonySpec.hs
tests/: andor.psl  arrays.psl  bgv.psl  bind-shares.psl  compound-reveal.psl  compound-share.psl  demo.psl  flt-arith.psl  fold.psl  let-ascr.psl  located-type.psl  log.psl  micro-let.psl  mux-case-list.psl  mux-deep.psl  mux-pair.psl  mux-prin.psl  mux-sum.psl  mux.psl  natfold.psl  not-my-var.psl  overflow-int.psl  overflow-nat.psl  pairs-noloc.psl  proc1.psl  proc2.psl  ref-list-type.psl  return-mux.psl  return-twice.psl  reveal-ssec.psl  shared-bullet.psl  solo-no-self.psl  solo.psl  string-concat.psl  sums.psl  this.psl  underflow-int.psl  underflow-nat.psl  uninspecting-par.psl  ver-0.psl  (+4 more)
writeup/: README.md  spdz.md  verification.md
yacc/: .gitignore  Makefile  backends.y  psl.y  test.psl
(+1063 files in other folders)
